# moat

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SCOUT.md  SECURITY.md  SUPPORT.md  conftest.py  pyproject.toml  requirements-dev.txt
.beads/: beads.left.meta.json  issues.jsonl  metadata.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
000-docs/: 000-PP-STRT-moat-stack-strategy.md  001-architecture.md  002-AT-FLOW-request-flows.md  003-capability-spec.md  004-policy-spec.md  005-DR-SPEC-receipts-and-events.md  006-AT-DATA-data-model.md  007-security.md  008-AT-ARCH-trust-plane.md  009-DR-SPEC-mcp-and-rest-apis.md  010-AA-AUDT-appaudit-devops-playbook.md  011-OD-SOPS-audit-harness-baseline-2026-05-01.md
infra/cloudrun/: control-plane.yaml  gateway.yaml  mcp-server.yaml  trust-plane.yaml
infra/local/: .env.example  docker-compose.yml
scripts/: demo.sh  dev.sh
services/control-plane/: Dockerfile  pyproject.toml
services/control-plane/app/: __init__.py  config.py  logging_config.py  main.py  store.py  vault.py
services/control-plane/app/routers/: __init__.py  agents.py  capabilities.py  connections.py
services/control-plane/tests/: __init__.py  conftest.py  test_agents.py  test_capabilities.py  test_connections.py
services/gateway/: Dockerfile  pyproject.toml
services/gateway/app/: __init__.py  capability_cache.py  config.py  idempotency_store.py  intent_listener.py  main.py  middleware.py  policy_bridge.py  skill_builder.py
services/gateway/app/adapters/: __init__.py  a2a_proxy.py  base.py  http_proxy.py  local_cli.py  network_utils.py  openai_proxy.py  slack.py  stub.py  web3_rpc.py
services/gateway/app/erc8004/: ipfs.py  metadata.py  registry_sync.py  tba.py
services/gateway/app/hooks/: irsb_receipt.py
services/gateway/app/routers/: discovery.py  execute.py  skill_builder.py
services/gateway/tests/: __init__.py  conftest.py  test_erc8004.py  test_execute.py  test_ipfs_tba.py  test_irsb_receipt.py  test_policy_bridge.py  test_skill_builder.py
services/mcp-server/: Dockerfile  pyproject.toml
services/mcp-server/app/: __init__.py  config.py  http_client.py  main.py  serve.py  stdio_server.py  tool_definitions.py
services/mcp-server/app/routers/: __init__.py  discovery.py  tools.py
services/mcp-server/tests/: conftest.py  test_discovery.py
services/trust-plane/: Dockerfile  pyproject.toml
services/trust-plane/app/: __init__.py  config.py  main.py  scoring.py
services/trust-plane/app/routers/: __init__.py  events.py  stats.py
